k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-splitter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: receipt-splitter
  template:
    metadata:
      labels:
        app: receipt-splitter
    spec:
      containers:
        - name: receipt-splitter
          image: receiptSplitterACR.azurecr.io/receipt-splitter:latest
          ports:
            - containerPort: 8080
