k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receipt-splitter-service
spec:
  type: LoadBalancer
  selector:
    app: receipt-splitter
  ports:
    - port: 80
      targetPort: 8080
